[gd_scene load_steps=4 format=3 uid="uid://dyek26vmasc6x"]

[ext_resource type="Script" path="res://Scenes/Main/main.gd" id="1_efoxe"]
[ext_resource type="Texture2D" uid="uid://chtlhhplavsu4" path="res://Assets/Onhouse/manubackg.png" id="2_coy7b"]
[ext_resource type="FontFile" uid="uid://b5ew65qrvgo0k" path="res://Assets/BitPotion.ttf" id="4_bhp12"]

[node name="Main" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_efoxe")

[node name="MainMenuMarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_top = 240

[node name="MainMenuColor" type="ColorRect" parent="MainMenuMarginContainer"]
layout_mode = 2
color = Color(0.0784314, 0.0784314, 0.0784314, 1)

[node name="MainMenuEdges" type="NinePatchRect" parent="MainMenuMarginContainer/MainMenuColor"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_coy7b")
region_rect = Rect2(0, 0, 128, 128)
patch_margin_left = 32
patch_margin_top = 96
patch_margin_right = 32
patch_margin_bottom = 96

[node name="MarginContainer" type="MarginContainer" parent="MainMenuMarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 24
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 24
theme_override_constants/margin_bottom = 30

[node name="MenuContainer" type="VBoxContainer" parent="MainMenuMarginContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="TimeMarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_top = 40

[node name="TimerLabel" type="Label" parent="TimeMarginContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 0
theme_override_colors/font_color = Color(1, 1, 0.941176, 1)
theme_override_colors/font_outline_color = Color(0.0980392, 0.0980392, 0.0980392, 1)
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("4_bhp12")
theme_override_font_sizes/font_size = 161
text = "00:00"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 4096.0

[node name="TimerEndSound" type="AudioStreamPlayer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
